solved scrollbar issue

--- a/styles/flowers.css
+++ b/styles/flowers.css
@@ -2,7 +2,12 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  
   font-family: "Noto Serif", serif;
+}
+html, body {
+  overflow-x: hidden; 
+  width: 100%;
 }
 .container {
   max-width: 1140px;
@@ -193,13 +198,13 @@
   background-size: cover;
   border-radius: 16px;
   padding: 40px 30px;
-  background: rgba(0, 0, 0, 0.40);
+  background: rgba(0, 0, 0, 0.4);
   background-blend-mode: darken;
   
 }
 .promo-code-zabo{
   width: 100%;
-  height: 423px;
+  
   grid-row: span 2;
    display: flex;
   flex-direction: column;
@@ -208,10 +213,11 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  background: rgba(0, 0, 0, 0.4);
+  background-blend-mode: darken;
   border-radius: 16px;
   padding: 40px ;
-  background: rgba(0, 0, 0, 0.40);
-  background-blend-mode: darken;
+  overflow: hidden;
   
 }
 .promo-code-bloom h3, .promo-code-ana h3 {
